Fix: When the inline-SVG experiment is active the list icons alignment can not be changed.

--- a/assets/dev/scss/frontend/widgets/icon-list.scss
+++ b/assets/dev/scss/frontend/widgets/icon-list.scss
@@ -3,6 +3,7 @@
 //
 
 .elementor-widget {
+	$e-icon-list-svg-icon-size: var(--e-icon-list-icon-size, 1em);
 
 	&.elementor-icon-list--layout-inline {
 
@@ -71,16 +72,28 @@
 		display: flex;
 
 		svg {
-			$e-icon-list-svg-icon-size: var(--e-icon-list-icon-size, 1em);
-
 			width: $e-icon-list-svg-icon-size;
 			height: $e-icon-list-svg-icon-size;
-			margin-inline-end: calc(#{$e-icon-list-svg-icon-size} * 0.25);
 		}
 
 		i {
 			width: 1.25em;
 			font-size: var(--e-icon-list-icon-size);
+		}
+	}
+
+	// Should be applied only on the icon-list widget, and not on any other widget that rely on this CSS.
+	&.elementor-widget-icon-list {
+		.elementor-icon-list-icon svg {
+			margin: 0 calc(#{$e-icon-list-svg-icon-size} * 0.25) 0 0;
+		}
+
+		&.e-align-icon-right .elementor-icon-list-icon svg {
+			margin: 0 0 0 calc(#{$e-icon-list-svg-icon-size} * 0.25);
+		}
+
+		&.e-align-icon-center .elementor-icon-list-icon svg {
+			margin: 0 calc(#{$e-icon-list-svg-icon-size} * 0.125);
 		}
 	}
 
